force-app/main/default/objects/Contact/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>pull in account number to show on Search results for Contacts</description>
    <formula>Account.SAP_ACCOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account #</label>
    <type>Text</type>
</CustomField>