force-app/main/default/objects/Contact/fields/Account_Shipping_Condition_Desc__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Condition_Desc__c</fullName>
    <formula>Account.Shipping_Condition_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Condition Desc</label>
    <type>Text</type>
</CustomField>