force-app/main/default/objects/Contact/fields/Achieved_Stone_Facade_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Stone_Facade_Benefit__c</fullName>
    <label>Achieved Stone Facade Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>