force-app/main/default/objects/Contact/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <formula>NOT(TEXT(Account.Status__c) == &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Account</label>
    <type>Checkbox</type>
</CustomField>