force-app/main/default/objects/Contact/fields/Activity_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Activity_Monitor__c</fullName>
    <formula>IF( Days_Since_Last_Activity__c &lt;180, 
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 90 Days&quot;,40,40) , 
IF( Days_Since_Last_Activity__c &lt;365, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;90 to 365 Days&quot;,40,40), 
IF( Days_Since_Last_Activity__c &gt;365, 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than a Year&quot;,40,40) , 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,40,40))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Monitor</label>
    <type>Text</type>
</CustomField>