force-app/main/default/objects/Contact/fields/Architect_Role__c.field-meta.xml
<CustomField>
    <fullName>Architect_Role__c</fullName>
    <description>Defines the Role for the Contact if they are at an Account which is an Architect Type. May be able to be deprecated and combined with other fields.</description>
    <inlineHelpText>If this is an Architect, What is their Role?</inlineHelpText>
    <label>Architect Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Administrator</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Spec Writer</fullName>
            </value>
            <value>
                <fullName>Technologist</fullName>
            </value>
            <value>
                <fullName>Mid-Level Principal</fullName>
            </value>
            <value>
                <fullName>Junior Principal</fullName>
            </value>
            <value>
                <fullName>Senior Architect</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>