force-app/main/default/objects/Contact/fields/Attempt_Source__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Source__c</fullName>
    <description>This picklist is automatically populated based on the Call Attempt Description field using a Flow.</description>
    <label>Attempt Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>