force-app/main/default/objects/Contact/fields/Attempt_Source_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Source_Email_Date__c</fullName>
    <label>Attempt Source Email Date</label>
    <type>DateTime</type>
</CustomField>