force-app/main/default/objects/Contact/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Insurance Adjuster</fullName>
            </value>
            <value>
                <fullName>Maintenance/Facility Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>