force-app/main/default/objects/Contact/fields/BIR_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>BIR_Eligibility__c</fullName>
    <description>Determines if the user is able to submit BIR claims</description>
    <inlineHelpText>Contacts with value &quot;Eligible&quot; will be able to view or submit rebates. Contacts with value &quot;Not Eligible&quot; or blank will not be able to submit or view rebates</inlineHelpText>
    <label>BIR Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>