force-app/main/default/objects/Contact/fields/BP_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>BP_Eligibility__c</fullName>
    <label>BP Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible for current year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>