force-app/main/default/objects/Contact/fields/Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt__c</fullName>
    <label>Call Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Attempt</valueSetName>
    </valueSet>
</CustomField>