force-app/main/default/objects/Contact/fields/Call_Attempt_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Comments__c</fullName>
    <description>Call Attempt Comments</description>
    <label>Call Attempt Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>