force-app/main/default/objects/Contact/fields/Call_Attempt_Description__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Description__c</fullName>
    <description>Wrong # drops off list, Hard refusal: drops off list, soft refusal drops off 3 months, left voicemail is 48 hours and email is 1 week</description>
    <inlineHelpText>Wrong # drops off list, Hard refusal: drops off list, soft refusal drops off 3 months, left voicemail is 48 hours and email is 1 week</inlineHelpText>
    <label>Call Attempt Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Attempt__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Call_Attempt_Description</valueSetName>
    </valueSet>
</CustomField>