force-app/main/default/objects/Contact/fields/Call_Attempt_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Intervals__c</fullName>
    <formula>IF(TEXT(NOW() - Last_Modified_Call_Attempt__c) &lt;&gt; null, TEXT(
 FLOOR(NOW() - Last_Modified_Call_Attempt__c)
)  &amp; &quot; Days &quot; &amp;
TEXT(FLOOR((NOW()- Last_Modified_Call_Attempt__c)*24)) &amp;&apos; Hrs &apos;&amp; TEXT(FLOOR(((((NOW()- Last_Modified_Call_Attempt__c)*24)-FLOOR((NOW()- Last_Modified_Call_Attempt__c)*24))*60)))&amp;&apos; Mins&apos;, &apos;0 Days 0 Hrs 0 Mins&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Attempt Interval</label>
    <type>Text</type>
</CustomField>