force-app/main/default/objects/Contact/fields/Call_Attempt_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Time__c</fullName>
    <formula>(NOW() - Last_Modified_Call_Attempt__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Attempt Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>