force-app/main/default/objects/Contact/fields/Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempted_By__c</fullName>
    <description>Who made the call attempt?</description>
    <label>Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>