force-app/main/default/objects/Contact/fields/Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Date__c</fullName>
    <description>The date to call the contact back</description>
    <label>Call Back Date</label>
    <type>Date</type>
</CustomField>