force-app/main/default/objects/Contact/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>What Category does this Contact fall into?</description>
    <inlineHelpText>What Category does this Contact fall into?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>BPCS</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Deck Builder</fullName>
            </value>
            <value>
                <fullName>Direct Dealer Salesman</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Distributor Buyer</fullName>
            </value>
            <value>
                <fullName>Distributor Owner</fullName>
            </value>
            <value>
                <fullName>Distributor Salesman</fullName>
            </value>
            <value>
                <fullName>Fence Distributor Branch Manager</fullName>
            </value>
            <value>
                <fullName>Fence Builder</fullName>
            </value>
            <value>
                <fullName>Fence Direct Dealer</fullName>
            </value>
            <value>
                <fullName>Fence Direct Dealer Salesman</fullName>
            </value>
            <value>
                <fullName>Fence Distributor</fullName>
            </value>
            <value>
                <fullName>Fence Distributor Inside Sales</fullName>
            </value>
            <value>
                <fullName>Fence Distributor Salesmen</fullName>
            </value>
            <value>
                <fullName>Fence Landscape Architect</fullName>
            </value>
            <value>
                <fullName>Fence Lumberyard</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Lumberyard</fullName>
            </value>
            <value>
                <fullName>Lumberyard Buyer</fullName>
            </value>
            <value>
                <fullName>Lumberyard Owner</fullName>
            </value>
            <value>
                <fullName>Lumberyard Salesman</fullName>
            </value>
            <value>
                <fullName>Pull Thru Dealer</fullName>
            </value>
            <value>
                <fullName>Pull Thru Dealer Salesman</fullName>
            </value>
            <value>
                <fullName>Remodeler</fullName>
            </value>
            <value>
                <fullName>Fence Branch Manager</fullName>
            </value>
            <value>
                <fullName>Deck Builders</fullName>
            </value>
            <value>
                <fullName>Fence Branch Managers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>