force-app/main/default/objects/Contact/fields/CCB_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CCB_Eligibility__c</fullName>
    <description>Determines if the contact is able to submit a CCB claim.</description>
    <inlineHelpText>Contacts with value &quot;Eligible&quot;  or &quot;Not Eligible for current year&quot; will be able to view or submit rebates. Contacts with value &quot;Not Eligible&quot; or blank will not be able to submit or view rebates</inlineHelpText>
    <label>CCB Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible for current year</fullName>
                <isActive>false</isActive>
                <label>Not Eligible for current year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>