force-app/main/default/objects/Contact/fields/CEILINGS_ID__c.field-meta.xml
<CustomField>
    <fullName>CEILINGS_ID__c</fullName>
    <label>CEILINGS_ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>