force-app/main/default/objects/Contact/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <inlineHelpText>Select one or more certifications this individual has achieved.</inlineHelpText>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BIBS</fullName>
            </value>
            <value>
                <fullName>RESNET/BPI</fullName>
            </value>
            <value>
                <fullName>CertaSpray Certified Installer</fullName>
            </value>
            <value>
                <fullName>Master Craftsman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>