force-app/main/default/objects/Contact/fields/Change_Pay_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Change_Pay_Eligibility__c</fullName>
    <description>Change_Pay_Eligibility</description>
    <inlineHelpText>Contacts with value &quot;Eligible&quot;  or &quot;Not Eligible for current year&quot; will be able to view or submit rebates. Contacts with value &quot;Not Eligible&quot; or blank will not be able to submit or view rebates</inlineHelpText>
    <label>Change Pay Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible for Current Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>