force-app/main/default/objects/Contact/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>This field is specific to Contacts uploaded for the SPG Marketing Survey</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>