force-app/main/default/objects/Contact/fields/Consent_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Consent_Expiry__c</fullName>
    <description>If the Consent Obtained field matches criteria for picklist values, then the Consent Expiry Date will show with two years added. Otherwise, if it does not meet criteria, the Consent Expiry will show as Does Not Expire.</description>
    <formula>CASE(Consent_Obtained__c ,
&quot;&quot;, &quot;&quot;,
&quot;Tradeshow&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)), 
&quot;Webinar&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)),
&quot;Product/Company Inquiry&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)),
&quot;Existing Business Relationship&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)),
&quot;In-Person Meeting&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)),
&quot;Customer Purchase (last 24 months)&quot;, TEXT(ADDMONTHS(Email_Opt_In_Date__c ,24)),
&quot;Does Not Expire&quot;)</formula>
    <label>Consent Expiry</label>
    <type>Text</type>
</CustomField>