force-app/main/default/objects/Contact/fields/Consent_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Consent_Obtained__c</fullName>
    <description>Used with CASL Compliance in Canada, this shows how Consent was Obtained for Marketing purposes.</description>
    <inlineHelpText>Select a value to show how the Contact Obtained Consent.</inlineHelpText>
    <label>Consent Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>CertainTeed Website</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
            </value>
            <value>
                <fullName>Product/Company Inquiry</fullName>
            </value>
            <value>
                <fullName>Existing Business Relationship</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Customer Purchase (last 24 months)</fullName>
                <isActive>false</isActive>
                <label>Customer Purchase (last 24 months)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>