force-app/main/default/objects/Contact/fields/ConstructionPts__CPLink__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__CPLink__c</fullName>
    <label>Dodge Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>