force-app/main/default/objects/Contact/fields/Contact_Card_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Card_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loyalty Payment Card Status</description>
    <label>Contact Card Active</label>
    <type>Checkbox</type>
</CustomField>