force-app/main/default/objects/Contact/fields/Contact_Card_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Contact_Card_Expiration__c</fullName>
    <description>Expiration Date of Payment Card</description>
    <label>Contact Card Expiration</label>
    <type>Date</type>
</CustomField>