force-app/main/default/objects/Contact/fields/Contact_Card_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Card_Order_Status__c</fullName>
    <description>Field to track orders to payment provider for issuing new reloadable cards to Loyalty rebate members.</description>
    <inlineHelpText>Field to track orders to payment provider for issuing new reloadable cards to Loyalty rebate members.</inlineHelpText>
    <label>Contact Card Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>