force-app/main/default/objects/Contact/fields/Contact_flag__c.field-meta.xml
<CustomField>
    <fullName>Contact_flag__c</fullName>
    <description>display warning flag for inactive contacts</description>
    <formula>IF( ISPICKVAL(Status__c, &apos;Inactive&apos;), IMAGE ( &quot;/servlet/servlet.FileDownload?file=015700000022qzW&quot;,&quot;&quot;,75,75) , &quot;&quot;)</formula>
    <label>Contact flag</label>
    <type>Text</type>
</CustomField>