force-app/main/default/objects/Contact/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <description>Notes for Contacts</description>
    <inlineHelpText>Used for quick reference notes about the contact</inlineHelpText>
    <label>Contact Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>