force-app/main/default/objects/Contact/fields/Contact_Owner_Manager_is_User__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Manager_is_User__c</fullName>
    <description>Contact Owner&apos;s Manager is logged in User</description>
    <formula>Owner.Manager.Id  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Owner&apos;s Manager is logged in User</inlineHelpText>
    <label>Contact Owner Manager is User</label>
    <type>Checkbox</type>
</CustomField>