force-app/main/default/objects/Contact/fields/Contact_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Region__c</fullName>
    <description>The region of the contact owner</description>
    <formula>Owner.Region__c</formula>
    <inlineHelpText>The region of the contact owner</inlineHelpText>
    <label>Contact Owner Region</label>
    <type>Text</type>
</CustomField>