force-app/main/default/objects/Contact/fields/Contact_Owner_SGID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_SGID__c</fullName>
    <description>Contact Owner&apos;s SGID</description>
    <formula>Owner.FederationIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner SGID</label>
    <type>Text</type>
</CustomField>