force-app/main/default/objects/Contact/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <label>Contact Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>