force-app/main/default/objects/Contact/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <description>Contractor ID</description>
    <label>Contractor ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>