force-app/main/default/objects/Contact/fields/Correct_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Correct_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the contact which this is a duplicate of.</inlineHelpText>
    <label>Correct Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>