force-app/main/default/objects/Contact/fields/Count_Of_Active_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Active_Credentials__c</fullName>
    <label>Count of Active Credentials</label>
    <summaryFilterItems>
        <field>Assigned_Credential__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Assigned_Credential__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Contractor Credential</value>
    </summaryFilterItems>
    <summaryForeignKey>Assigned_Credential__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>