force-app/main/default/objects/Contact/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>Field to display Contact creator role name.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>