force-app/main/default/objects/Contact/fields/CreatePartnerUser__c.field-meta.xml
<CustomField>
    <fullName>CreatePartnerUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will trigger a Flow that automatically creates a partner user from the Contact. The account must first be partnered for this to work properly.</description>
    <inlineHelpText>Click this checkbox to automatically create a partner user.</inlineHelpText>
    <label>Create Partner User</label>
    <type>Checkbox</type>
</CustomField>