force-app/main/default/objects/Contact/fields/Credentialed_Contact__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Contact__c</fullName>
    <description>Checks if the roll-up count of active credentials is equal or bigger than 1.</description>
    <formula>Count_Of_Active_Credentials__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credentialed Contact</label>
    <type>Checkbox</type>
</CustomField>