force-app/main/default/objects/Contact/fields/CT_Event_history__c.field-meta.xml
<CustomField>
    <fullName>CT_Event_history__c</fullName>
    <inlineHelpText>Example:
&quot;2008 Requested invitation to Masters&quot;
&quot;2007 Invited to Totem - Accepted&quot;
&quot;2006 Invited to Masters - Declined&quot;</inlineHelpText>
    <label>CT Event History &amp; Requests</label>
    <type>TextArea</type>
</CustomField>