force-app/main/default/objects/Contact/fields/Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Experience</label>
    <referenceTo>Customer_Experience__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>