force-app/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <description>Evaluates data quality for contact fields.</description>
    <formula>IF 
(RecordType.Name = &apos;Ceilings Contact&apos;,
   IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;
   &amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;
   &amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;
   &amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;
   &amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;
   &amp;IF( ISPICKVAL(  Contact_Relationship__c ,&quot;&quot;), &quot;Status&quot;,&quot;&quot;))
   &amp;IF( LEN(  ReportsToId ) = 0, &quot;Reports To, &quot;,&quot;&quot;)&amp;&quot;&quot;
,
   IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot; 
   &amp;IF( ISPICKVAL(Contact_Type__c ,&quot;&quot;), &quot;Contact Type, &quot;,&quot;&quot;) 
   &amp;IF( ISPICKVAL(Role_Type__c ,&quot;&quot;), &quot;Role Type, &quot;,&quot;&quot;) 
   &amp;IF( AND( LEN( Email)= 0, Does_Not_Have_Email__c = FALSE), &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot; 
   &amp;IF( LEN(Title) = 0, &quot;Title, &quot;,&quot;&quot;))
)</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>